# Codex

./: pyproject.toml
docs/: plugin-system.md  research-notes.md
harness-delivery-iac/: SKILL.md
harness-delivery-iac/assets/: pipeline-template.md
plugins/: context_enricher.py
skills/flutter-dart/: SKILL.md
skills/flutter-dart/references/: dart.md  flutter.md
skills/harness-delivery-iac/: SKILL.md
skills/harness-delivery-iac/references/: ci-cd-and-prs.md  core-categories.md  iacm-and-workspaces.md  platform-api-and-integrations.md
skills/helm-kubernetes/: SKILL.md
skills/helm-kubernetes/references/: helm.md  kubernetes-contributor.md  kubernetes.md
skills/keycloak-org-theming/: SKILL.md
skills/keycloak-org-theming/references/: development-and-themes.md  organizations-and-admin.md  releases-and-ecosystem.md
skills/python-uv-claude-code/: SKILL.md
skills/python-uv-claude-code/references/: agent-ecosystem.md  python.md  uv.md
skills/skill-creator/: SKILL.md
skills/skill-creator/references/: skill-authoring.md
skills/skill-installer/: SKILL.md
skills/skill-installer/references/: skill-installation.md
skills/structurizr-architecture/: SKILL.md
skills/terraform-opentofu/: SKILL.md
skills/terraform-opentofu/references/: docker.md  (+4 more)
src/kodex_plugin_system/: __init__.py  base.py  cli.py  errors.py  manager.py  registry.py
structurizr-architecture/: SKILL.md
structurizr-architecture/assets/: adr-template.md
terraform-opentofu/: SKILL.md
terraform-opentofu/assets/: iac-summary.md
tests/: test_plugin_system.py  test_skills_catalog.py
(+3 files in other folders)
